--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="monetag" content="3e00c677f6bd1da2272fcaf480da2aaa">
   <title>MovieShare Pro - Watch & Explore</title>
 
   <!-- Google Font -->
@@ -340,4 +341,5 @@
   </script>
 </body>
 </html>
+
 
