--- a/index.html
+++ b/index.html
@@ -273,43 +273,51 @@
   <section class="movies" id="movies">
     <!-- Example Movie Cards -->
     <div class="movie-card" data-category="action" data-title="Avengers">
-      <img src="background4.jpg" alt="Avengers">
+      <img src="" alt="Avengers">
       <div class="overlay">
-        <a href="https://youtube.com" target="_blank">Watch Now</a>
+        <a href="" target="_blank">Watch Now</a>
       </div>
-      <h3>Avengers</h3>
+      <h3></h3>
     </div>
 
     <div class="movie-card" data-category="comedy" data-title="Jumanji">
-      <img src="background1.png" alt="Jumanji">
+      <img src="" alt="Jumanji">
       <div class="overlay">
-        <a href="https://youtube.com" target="_blank">Watch Now</a>
+        <a href="" target="_blank">Watch Now</a>
       </div>
-      <h3>Jumanji</h3>
+      <h3></h3>
     </div>
 
     <div class="movie-card" data-category="Adult" data-title="Inception">
-      <img src="background2.jpg" alt="Inception">
+      <img src="image2.jpg" alt="Inception">
       <div class="overlay">
-        <a href="https://youtube.com" target="_blank">Watch Now</a>
+        <a href="https://tinyurl.com/bdedyf83" target="_blank">Watch Now</a>
       </div>
-      <h3>Inception</h3>
+      <h3>Viral Video</h3>
     </div>
     
     <div class="movie-card" data-category="Adult" data-title="Inception">
-      <img src="background2.jpg" alt="Inception">
+      <img src="image1.jpg" alt="Inception">
       <div class="overlay">
-        <a href="https://youtube.com" target="_blank">Watch Now</a>
+        <a href="https://tinyurl.com/bdedyf83" target="_blank">Watch Now</a>
       </div>
-      <h3>Inception</h3>
+      <h3>Viral Video</h3>
     </div>
 
-    <div class="movie-card" data-category="horror" data-title="The Conjuring">
-      <img src="background3.jpg" alt="The Conjuring">
+    <div class="movie-card" data-category="Adult" data-title="Inception">
+      <img src="image3.jpg" alt="Inception">
       <div class="overlay">
-        <a href="https://youtube.com" target="_blank">Watch Now</a>
+        <a href="https://tinyurl.com/bdedyf83" target="_blank">Watch Now</a>
       </div>
-      <h3>The Conjuring</h3>
+      <h3>Viral Video</h3>
+    </div>
+    
+    <div class="movie-card" data-category="horror" data-title="The Conjuring">
+      <img src="" alt="The Conjuring">
+      <div class="overlay">
+        <a href="" target="_blank">Watch Now</a>
+      </div>
+      <h3></h3>
     </div>
   </section>
 
@@ -341,5 +349,6 @@
   </script>
 </body>
 </html>
+
 
 
