--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <div class="movie-card" data-category="Adult" data-title="Inception">
       <img src="image2.jpg" alt="Viral Video">
       <div class="overlay">
-        <a href="https://tinyurl.com/bdedyf83" target="_blank">Watch Now</a>
+        <a href="https://www.effectivegatecpm.com/h3hq5hhria?key=b2a66335b5429809acd8acc4856bea05" target="_blank">Watch Now</a>
       </div>
       <h3>Viral Video</h3>
     </div>
@@ -625,6 +625,7 @@
   </script>
 </body>
 </html>
+
 
 
 
